<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_spacing_10dp"
    tools:context=".ucubesampleapplication.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/app_spacing_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/app_spacing_5dp"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/app_spacing_5dp"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txtsize" />
        </LinearLayout>

        <View
            android:id="@+id/seperator_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_spacing_2dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_container" />

        <LinearLayout
            android:id="@+id/response_code_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/app_spacing_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seperator_view">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/app_spacing_5dp"
                android:text="@string/response_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txtsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/response_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/app_spacing_5dp"
                android:text="@string/response_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txtsize" />
        </LinearLayout>

        <View
            android:id="@+id/seperator_view_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_spacing_2dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/response_code_container" />

        <TextView
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/app_spacing_5dp"
            android:text="@string/message"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtsize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seperator_view_1" />

        <TextView
            android:id="@+id/response_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/app_spacing_5dp"
            android:text="@string/status"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_spacing_10dp"
        android:orientation="horizontal"
        android:padding="@dimen/app_spacing_5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/void_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_spacing_2dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/app_spacing_10dp"
            android:paddingTop="@dimen/app_spacing_20dp"
            android:paddingEnd="@dimen/app_spacing_10dp"
            android:paddingBottom="@dimen/app_spacing_20dp"
            android:text="Void" />

        <Button
            android:id="@+id/transaction_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_spacing_2dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/app_spacing_10dp"
            android:paddingTop="@dimen/app_spacing_20dp"
            android:paddingEnd="@dimen/app_spacing_10dp"
            android:paddingBottom="@dimen/app_spacing_20dp"
            android:text="@string/start_transaction" />

        <Button
            android:id="@+id/status_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_spacing_2dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/app_spacing_10dp"
            android:paddingTop="@dimen/app_spacing_20dp"
            android:paddingEnd="@dimen/app_spacing_10dp"
            android:paddingBottom="@dimen/app_spacing_20dp"
            android:text="@string/check_status"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>